# sticky-notes

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
i18n/en/: notes_basic.ftl  sticky_notes.ftl
i18n/ru/: notes_basic.ftl  sticky_notes.ftl
resources/: app.desktop  app.metainfo.xml  com.github.aae.notes.desktop  com.github.aae.notes.metainfo.xml
src/: app.rs  config.rs  icons.rs  lib.rs  main.rs  note.rs  notes.rs
src/app/: about_window.rs  applet.rs  edit_style.rs  restore_view.rs  service.rs  settings_view.rs  sticky_window.rs  styles_view.rs  utils.rs
src/note/: import.rs
src/notes/: collection.rs  import.rs  indicator_stickynotes.rs  note_data.rs  note_style.rs
test_data/: indicator-stickynotes
